--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
       crossorigin="anonymous"
     ></script> -->
-    <link rel="stylesheet" href="styles1.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div class="fonts">
       <nav class="navbar-settings">
         <div class="navbar-container-settings">
-          <a class="navbar-brand" href="index1.html">
+          <a class="navbar-brand" href="index.html">
             <img src="ID.png" alt="logo" width="40" />
           </a>
           <button
@@ -35,7 +35,7 @@
                 <a
                   class="nav-link active"
                   aria-current="page"
-                  href="index1.html"
+                  href="index.html"
                   >Home</a
                 >
               </li>
