--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <img class="rounded-img" src="img.jpg" alt="ups" />
             <h1 class="fw-light">Ihor Danylov</h1>
             <p class="text-muted">
-              Hello dudes! What's up? Let's find fly on the monitor, and press
+              Hello dudes! What's up? Let's find the fly on the monitor, and press
               "Like!" button, or press "DisLike" button if you can't find fly!
             </p>
             <a
