--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="places.html">Favorite places</a>
+                <a class="nav-link" href="index2.html">Home2</a>
               </li>
             </ul>
           </div>
