--- a/index2.html
+++ b/index2.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ihor Danylov</title>
+    <title>Home2(Ihor)</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -28,7 +28,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
-        <a class="navbar-brand p-0" href="index.html">
+        <a class="navbar-brand p-0" href="index2.html">
           <img src="ID.png" alt="logo" width="40" />
         </a>
         <button
@@ -45,12 +45,12 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
-                >Home</a
+              <a class="nav-link active" aria-current="page" href="index2.html"
+                >Home2</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="places.html">Favorite places</a>
+              <a class="nav-link" href="index.html">Home</a>
             </li>
           </ul>
         </div>
