--- a/index2.html
+++ b/index2.html
@@ -28,7 +28,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
-        <a class="navbar-brand p-0" href="index2.html">
+        <a class="navbar-brand p-0" href="index.html">
           <img src="ID.png" alt="logo" width="40" />
         </a>
         <button
