--- a/index.html
+++ b/index.html
@@ -4,17 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home(Ihor)</title>
-    <!-- <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
-      crossorigin="anonymous"
-    /> -->
-    <!-- <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-      crossorigin="anonymous"
-    ></script> -->
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -24,18 +13,13 @@
           <a class="navbar-brand" href="index.html">
             <img src="ID.png" alt="logo" width="40" />
           </a>
-          <button
-            class="navbar-toggler"
-          >
+          <button class="navbar-toggler">
             <span class="icon-toggler"></span>
           </button>
           <div class="navbar-collapse">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a
-                  class="nav-link active"
-                  aria-current="page"
-                  href="index.html"
+                <a class="nav-link active" aria-current="page" href="index.html"
                   >Home</a
                 >
               </li>
@@ -52,8 +36,9 @@
             <img class="rounded-img" src="img.jpg" alt="ups" />
             <h1 class="fw-light">Ihor Danylov</h1>
             <p class="text-muted">
-              Hello dudes! What's up? Let's find the fly on the monitor, and press
-              "Like!" button, or press "DisLike" button if you can't find fly!
+              Hello dudes! What's up? Let's find the fly on the monitor, and
+              press "Like!" button, or press "DisLike" button if you can't find
+              fly!
             </p>
             <a
               href="https://www.facebook.com/otreshonnuy"
