--- a/index.html
+++ b/index.html
@@ -1,62 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home(Ihor)</title>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body>
-    <div class="fonts">
-      <nav class="navbar-settings">
-        <div class="navbar-container-settings">
-          <a class="navbar-brand" href="index.html">
-            <img src="ID.png" alt="logo" width="40" />
-          </a>
-          <button class="navbar-toggler">
-            <span class="icon-toggler"></span>
-          </button>
-          <div class="navbar-collapse">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html"
-                  >Home</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="index2.html">Home2</a>
-              </li>
+   <head>
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <title>Home(Ihor)</title>
+      <link rel="stylesheet" href="css/style.css" />
+      <script src="js/script.js"></script>
+   </head>
+   <body>
+      <nav class="navbar">
+         <div class="navbar__container">
+            <a class="navbar__logo" href="index.html">
+               <img src="icons/ID.png" alt="logo" width="40" />
+            </a>
+            <button class="navbar__toogler">
+               <div class="navbar__toogler-icon"></div>
+            </button>
+            <ul class="navbar__elements">
+               <li>
+                  <a class="navbar__element active" href="index.html">Home</a>
+               </li>
+               <li>
+                  <a class="navbar__element" href="../ToDo-List/index.html">ToDo List</a>
+               </li>
             </ul>
-          </div>
-        </div>
+            <ul class="navbar__show hidden">
+               <li>
+                  <a class="navbar__element active" href="index.html">Home</a>
+               </li>
+               <li>
+                  <a class="navbar__element" href="../ToDo-List/index.html">ToDo List</a>
+               </li>
+            </ul>
+         </div>
       </nav>
-      <div class="container-logo">
-        <div class="row">
-          <div class="col-logo">
-            <img class="rounded-img" src="img.jpg" alt="ups" />
-            <h1 class="fw-light">Ihor Danylov</h1>
-            <p class="text-muted">
-              Hello dudes! What's up? Let's find the fly on the monitor, and
-              press "Like!" button, or press "DisLike" button if you can't find
-              fly!
-            </p>
-            <a
-              href="https://www.facebook.com/otreshonnuy"
-              target="_blank"
-              class="btn btn-primary"
-            >
-              Like!
-            </a>
-            <a
-              href="https://www.facebook.com/otreshonnuy"
-              target="_blank"
-              class="btn btn-secondary"
-            >
-              DisLike!
-            </a>
-          </div>
-        </div>
+      <div class="main">
+         <div class="main__container">
+            <div class="main__logo">
+               <img class="main__image" src="icons/img.jpg" alt="ups" />
+               <h1 class="main__title">Ihor Danylov</h1>
+               <p class="main__text">
+                  Hello dudes! What's up? Let's find the fly on the monitor, and press "Like!"
+                  button, or press "DisLike" button if you can't find fly!
+               </p>
+               <a href="https://www.facebook.com/otreshonnuy" class="main__button-primary">Like!</a>
+               <a href="https://www.facebook.com/otreshonnuy" class="main__button-secondary"
+                  >Dislike!
+               </a>
+            </div>
+         </div>
       </div>
-    </div>
-  </body>
+   </body>
 </html>
