--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>Home(Ihor)</title>
-      <link rel="stylesheet" href="css/style.css" />
-      <script src="js/script.js"></script>
+      <link rel="stylesheet" href="main/css/style.css" />
+      <script src="main/js/script.js"></script>
    </head>
    <body>
       <nav class="navbar">
          <div class="navbar__container">
             <a class="navbar__logo" href="index.html">
-               <img src="icons/ID.png" alt="logo" width="40" />
+               <img src="main/icons/ID.png" alt="logo" width="40" />
             </a>
             <button class="navbar__toogler">
                <div class="navbar__toogler-icon"></div>
@@ -37,7 +37,7 @@
       <div class="main">
          <div class="main__container">
             <div class="main__logo">
-               <img class="main__image" src="icons/img.jpg" alt="ups" />
+               <img class="main__image" src="main/icons/img.jpg" alt="ups" />
                <h1 class="main__title">Ihor Danylov</h1>
                <p class="main__text">
                   Hello dudes! What's up? Let's find the fly on the monitor, and press "Like!"
