--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                   <a class="navbar__element active" href="index.html">Home</a>
                </li>
                <li>
-                  <a class="navbar__element" href="../ToDo-List/index.html">ToDo List</a>
+                  <a class="navbar__element" href="/ToDo-List/index.html">ToDo List</a>
                </li>
             </ul>
             <ul class="navbar__show hidden">
@@ -29,7 +29,7 @@
                   <a class="navbar__element active" href="index.html">Home</a>
                </li>
                <li>
-                  <a class="navbar__element" href="../ToDo-List/index.html">ToDo List</a>
+                  <a class="navbar__element" href="/ToDo-List/index.html">ToDo List</a>
                </li>
             </ul>
          </div>
